2006-04-19	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_scroll_to_item): Avoid scrolling
	  horizontally (to the right) if the item width is larger than the
	  available allocation width, which fixes a weird scrolling bug with
	  the compact view. Bug #1683.

2006-04-19	Benedikt Meurer <benny@xfce.org>

	* exo-helper/exo-preferred-applications-settings.c(mcs_plugin_init):
	  Mark button label translation. Bug #1669.
	* po/libexo-0.3.pot, po/*.po: Update translations.

2006-04-17	Benedikt Meurer <benny@xfce.org>

	* exo-helper/exo-helper.c(exo_helper_execute): Finally fix the helper
	  command execution.

2006-04-16	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2006-04-16	Benedikt Meurer <benny@xfce.org>

	* === Released 0.3.1.6beta1 ===
	* NEWS, configure.in.in: Bump version.
	* configure.in.in: Depend on Xfce 4.2.2 or above.
	* Makefile.am, exo.spec.in, configure.in.in: Readd fixed exo.spec.in
	  file for RPM building.

2006-04-16	Benedikt Meurer <benny@xfce.org>

	* po/libexo-0.3.pot, po/*.po: Updated.

2006-04-16	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Check for sys/wait.h.
	* exo-helper/exo-helper.c: Properly retry with the remaining commands
	  if a command returns with an error within 5 seconds. This finally
	  fixes the issues with Firefox.

2006-04-16	Benedikt Meurer <benny@xfce.org>

	* docs/manual/C/exo-preferred-applications.xml.in: Update the
	  documentation date.

2006-04-16	Benedikt Meurer <benny@xfce.org>

	* NEWS: Update NEWS file for BETA1.
	* HACKING: Fix repository URL.
	* exo.spec.in, Makefile.am, configure.in.in: Drop spec file, as it is
	  totally outdated and unmaintained.

2006-04-15	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_layout_single_col): Apply patch
	  from Matt McClinch <mattmcclinch@gmail.com> to properly use the
	  calculated rowspan.
	* THANKS: Fix "Other contributors" section title.
