@@ -1,3 +1,8 @@
+2006-05-01	Benedikt Meurer <benny@xfce.org>
+
+	* configure.in.in, exo/exo-md5.c: RedHat/Fedora requires md5global.h
+	  before md5.h can be used. Bug #1732.
+
 2006-04-19	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-icon-view.c(exo_icon_view_scroll_to_item): Avoid scrolling
